# algorithm_synthesis

./: .gitignore  .gitmodules  .settings  README.md  algorithm.py  almaden.txt  cmemory.py  deps.txt  experiments_utils.py  floats.py  ibm_noise_models.py  imperfect_games.py  pomdp.py  qmemory.py  qpu_utils.py  qstates.py  requirements.txt  simulator.py  state_discrimination.py  temp.ipynb  temp.py  test.py  tests.py  thermalization_test.ipynb  utils.py
qalgorithm_synthesis/: .gitignore  CMakeLists.txt  cxh.sh  cxh_script.sh  experiments_script.sh  experiments_scripts.sh  fp.cpp  ipma_script.sh  main.cpp  pomdp.cpp  run_all_experiments.sh  utils.cpp
qalgorithm_synthesis/algorithms/: fake_almaden_0_6  fake_almaden_0_8  fake_almaden_2_4  fake_auckland_0_7  fake_auckland_0_8  fake_auckland_1_7  fake_auckland_1_8  fake_belem_1_8  fake_burlington_0_7  fake_cambridge_0_5  fake_cambridge_0_6  fake_cambridge_0_7  fake_cambridge_0_8  fake_cambridge_2_7  fake_casablanca_2_5  fake_geneva_0_7  fake_geneva_1_7  fake_geneva_2_5  fake_geneva_2_7  fake_guadalupe_2_7  fake_johannesburg_0_6  fake_johannesburg_1_8  fake_kolkata_1_6  fake_kolkata_3_8  fake_manhattan_0_6  fake_manhattan_0_8  fake_manhattan_1_4  fake_manhattan_1_7  fake_manhattan_1_8  fake_manhattan_2_8  fake_manhattan_4_8  fake_manhattan_5_7  fake_montreal_1_8  fake_oslo_0_6  fake_oslo_2_5  fake_oslo_3_7  fake_oslo_4_5  fake_oslo_4_7  fake_paris_0_8  fake_paris_4_5  (+13 more)
qalgorithm_synthesis/algorithms1/: fake_athens_0_5  fake_athens_1_7  fake_boeblingen_0_5  fake_boeblingen_4_5  fake_boeblingen_6_4  fake_bogota_0_5  (+26 more)
(+6405 files in other folders)
